Added Custom Styled Comboboxes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -55,4 +55,5 @@ AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Script/DTF4.DTF4GameMode
+GameInstanceClass=/Game/Blueprints/DTF4GameInstance.DTF4GameInstance_C
 
